src/widgets/ratingTable/ui/ratingTable.module.scss
.container {
    display: flex;
    flex-direction: column;
    width: 100%;
    position: relative;
    z-index: 11;
    background-color: var(--black);
    border-radius: 16px 16px 0 0;

    .header {
        display: grid;
        border-radius: 16px 16px 0 0;
        grid-template-columns: 100px 148px 1fr 180px;  // 148 = 108 + 20 + 20
        align-items: center;
        padding: 16px 20px;
        background-color: var(--blue);
        font-weight: 600;
        font-size: 18px;
        text-transform: uppercase;
        letter-spacing: 0.5px;

        .headerPlace {
            text-align: center;
        }

        .headerPhoto{
            padding-left: 20px;
        }

        .headerName {
            text-align: left;
        }

        .headerCoins {
            text-align: center;
        }
    }

    .loader {
        display: flex;
        flex-direction: column;
        gap: 8px;
        margin-top: 20px;

        .loaderItem{
            width: 100%;
            height: 130px;
        }
    }

    .empty {
        text-align: center;
        color: var(--text-gray);
        padding: 60px 20px;
        font-size: 18px;
        background-color: var(--dark-background);
        border-radius: 0 0 16px 16px;
    }

    .row {
        position: relative;
        display: grid;
        grid-template-columns: 100px 148px 1fr 180px;
        align-items: center;
        padding: 12px 20px;
        background-color: var(--light-black);
        border: 1px solid var(--dark-gray);
        border-top: none;
        transition: background-color 0.15s;

        transition: border .25s ease;

        &:last-child {
            border-radius: 0 0 16px 16px;

            @media (hover: hover) {                
                &::before{
                    border-radius: 0 0 16px 16px;
                }
            }
        }
        
        @media (hover: hover) {

            &::before{
                content: "";
                display: block;
                position: absolute;
                z-index: 1;
                width: 100%;
                height: 100%;
                top: 0px;
                left: 0px;
                width: calc(100% + 2px);
                left: -1px;
                outline: 3px solid var(--blue);
                opacity: 0;
                transition: opacity .25s ease;
            }
            
            &:hover {
                border: 1px solid var(--light-black);
                border-top: none;

                &::before{
                    opacity: 1;
                }
            }
        }

        &.rowTop3 {
            background-color: #121A24;

            @media (hover: hover) {            
                &:hover {
                    border: 1px solid #121A24;
                    border-top: none;
                }
            }
        }

        .place {
            font-size: 36px;
            font-weight: 600;
            text-align: center;
            color: rgba(255, 255, 255, .2);

            &.placeTop3{
                color: #2B4059;
            }
        }

        .photo {
            display: flex;
            justify-content: center;

            img {
                border-radius: 20px;
                object-fit: cover;
                width: 108px !important;
                height: 108px !important;
            }
        }

        .info {
            display: flex;
            flex-direction: column;

            .name {
                font-size: 18px;
                font-weight: 800;
                line-height: 106%;
                color: #fff;
                text-decoration: none;
            }

            .meta {
                display: flex;
                flex-direction: column;
                flex-wrap: wrap;
                color: rgba(255, 255, 255, .6);
                font-size: 16px;
                line-height: 100%;

                .speciality{
                    margin-top: 9px;
                }

                .city {
                    display: flex;
                    align-items: center;
                    gap: 8px;
                    margin-top: 11px;
                }
            }
        }

        .coins {
            font-size: 36px;
            font-weight: 900;
            text-align: center;
            color: var(--blue);
        }
    }
}

@media (max-width: 750px) {
    .container {
        .header {
            grid-template-columns: 60px 122px 1fr 140px; // 
            padding: 16px;

            .headerPhoto{
                padding-left: 16px;
            }
        }

        .row {
            grid-template-columns: 60px 122px 1fr 140px;  // 90 + 16 + 16
            padding: 12px 16px;

            .place {
                font-size: 28px;
            }

            .photo {
                img {
                    border-radius: 16px;
                    width: 90px !important;
                    height: 90px !important;
                }
            }

            .info {
                .meta {
                    .speciality{
                        margin-top: 7px;
                    }

                    .city {
                        gap: 6px;
                        margin-top: 9px;
                    }
                }
            }

            .coins {
                font-size: 28px;
                font-weight: 800;
            }
        }
    }
}

@media (max-width: 650px) {
    .container {
        .header {
            grid-template-columns: 40px 122px 1fr 120px;
        }

        .row {
            grid-template-columns: 40px 122px 1fr 120px;  

            .place {
                font-size: 24px;
            }

            .info {
                .name {
                    font-size: 16px;
                }

                .meta {
                    font-size: 15px;
                    .speciality{
                        margin-top: 7px;
                    }

                    .city {
                        gap: 6px;
                        margin-top: 9px;
                    }

                    svg{
                        height: 13px;
                    }
                }
            }

            .coins {
                font-size: 24px;
            }
        }
    }
}

@media (max-width: 550px) {
    .container {
        .header {
            grid-template-columns: 32px 72px 1fr 70px;  // 52 + 10 + 10

            .headerPhoto{
                padding-left: 10px;
            }
        }

        .row {
            grid-template-columns: 32px 72px 1fr 70px;  
            padding: 10px;

            .place {
                display: flex;
                align-self: flex-start;
                align-items: center;
                justify-content: center;
                height: 52px;
                font-size: 20px;
            }

            .photo {
                align-self: flex-start;
                img {
                    border-radius: 10px;
                    width: 52px !important;
                    height: 52px !important;
                }
            }

            .info {
                margin-right: 20px;

                .name {
                    font-size: 15px;
                }

                .meta {
                    font-size: 14px;

                    .speciality{
                        margin-top: 4px;
                    }
                    
                    .city{
                        margin-top: 6px;
                        gap: 4px;
                    }

                    svg{
                        height: 12px;
                        margin-top: -2px;
                    }
                }
            }

            .coins {
                font-size: 20px;
            }
        }
    }
}


@media (max-width: 410px) {
    .container {
        .header{
            font-size: 16px;
            grid-template-columns: 30px 72px 1fr 64px;
        }
        .row {
            grid-template-columns: 30px 72px 1fr 64px;

            .place {
                font-size: 18px;
            }

            .info {
                margin-right: 16px;

                .name {
                    font-size: 14px;
                }

                .meta {
                    font-size: 13px;

                    .city{
                        gap: 3px;
                    }
                    svg{
                        height: 11px;
                        margin-top: -1px;
                    }
                }
            }
        }
    }
}

@media (max-width: 400px) {
    .container {
        .row {
            .info {
                margin-right: 10px;

                .name {
                    font-weight: 700;
                }
            }
        }
    }
}

